Добавил авторизацию по QR коду. Поправил запрос, добавил камеру для сканирования. Добавил библиотеку для считывания QR кода. Добавил во viewModel работу с запросами для получения данных.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">TJournal</string>
     <string name="title_feed">Лента</string>
     <string name="title_profile">Профиль</string>
+    <string name="authorization">Авторизоваться</string>
+    <string name="scan">Сканировать</string>
+    <string name="logout">Выйти</string>
+    <string name="ok">Ок</string>
+    <string name="permission_not_granted">Пользователь не дал разрешения</string>
 </resources>
